Worked on 03_exploratory_data_analysis.ipynb, should be ready for feature engineering

--- a/notebooks/01_pulling_solar_radiation_data.ipynb
+++ b/notebooks/01_pulling_solar_radiation_data.ipynb
@@ -11,7 +11,7 @@
     "This project focuses on analyzing historical solar irradiance and other features to train a model. With this model using weather forecasts one should be able to predict solar energy generation.\n",
     "This data is retrieved from the [Photovoltaic Geographical Information System (PVGIS)](https://joint-research-centre.ec.europa.eu/photovoltaic-geographical-information-system-pvgis/pvgis-tools/hourly-radiation_en).\n",
     "\n",
-    "### Data Source\n",
+    "### Data Source (Historical solar radiation data)\n",
     "The dataset is fetched using the PVGIS API and includes key parameters such as:\n",
     "- **Global in-plane irradiance (G(i))**: Measured in W\\m2\n",
     "- **Air temperature (T2m)**: Measured in °C\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
