Fixed date problems using locate Freiburg and tz_convert to UTC Moved train_linear_regression_model to a seperate folder "model_training"

--- a/notebooks/01_pulling_solar_radiation_data.ipynb
+++ b/notebooks/01_pulling_solar_radiation_data.ipynb
@@ -17,7 +17,7 @@
     "- **Air temperature (T2m)**: Measured in °C\n",
     "- **Wind speed (WS10m)**: Measured in m/s at 10m\n",
     "- **Location**: Latitude and Longitude chosen for Freiburg im Breisgau\n",
-    "- **Time**: Span of time for training data is the year 2020 with hourly data, i.e. 8760 entries, each entry representing 1 hour of the year (possible data to fetch from this homepage for years: 2005-2020)\n",
+    "- **Time**: in UTC. Span of time for training data is the year 2020 with hourly data, i.e. 8760 entries, each entry representing 1 hour of the year (possible data to fetch from this homepage for years: 2005-2020)\n",
     "\n",
     "### Project Goal\n",
     "The objective is to preprocess, analyze, and build models that can predict solar energy generation for Baden-Württemberg based on weather forecasts.\n"
