Cleaned up the Repository, deleted unnecessary files

--- a/notebooks/01_pulling_data.ipynb
+++ b/notebooks/01_pulling_data.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,13 +114,14 @@
     "        # Save dataframe as pickle\n",
     "        with open(save_path, \"wb\") as file:\n",
     "            pickle.dump(df, file)\n",
+    "            print(f\"Saved dataframe as pickle to {save_path}\")\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +209,7 @@
     "    # Extract the time-series data\n",
     "    data_list = []\n",
     "    for entry in all_data:\n",
-    "        metadata = entry.get(\"smeta_data\", {})\n",
+    "        #metadata = entry.get(\"smeta_data\", {})\n",
     "        series = entry.get(\"series\", [])\n",
     "\n",
     "        for timestamp, value in series:\n",
@@ -225,6 +226,12 @@
     "    last_timestamp = df[\"datetime\"].iloc[-1]\n",
     "\n",
     "    print(f\"Given the start_date {start_date} and end_date {end_date} the available timestamps are ranging from {first_timestamp} to {last_timestamp}\")\n",
+    "\n",
+    "    if save == True and save_path != None:\n",
+    "        # Save dataframe as pickle\n",
+    "        with open(save_path, \"wb\") as file:\n",
+    "            pickle.dump(df, file)\n",
+    "            print(f\"Saved dataframe as pickle to {save_path}\")\n",
     "\n",
     "    # The returned df (and all_data) includes data for the time interval of interest, but it also includes data outside of that time interval of interest\n",
     "    # Matching the data properly is done in the next step in the pipeline with functions from data_preprocessing.py\n",
