--- a/notebooks/01_pulling_data.ipynb
+++ b/notebooks/01_pulling_data.ipynb
@@ -8,24 +8,34 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "This project focuses on analyzing historical solar irradiance and other features to train a model. With this model using weather forecasts one should be able to predict solar energy generation.\n",
-    "This data is retrieved from the [Photovoltaic Geographical Information System (PVGIS)](https://joint-research-centre.ec.europa.eu/photovoltaic-geographical-information-system-pvgis/pvgis-tools/hourly-radiation_en).\n",
+    "This project focuses on using weather data and other features to train a ML-model. For now this project is rather a proof of work containing some experimentation. So for now we use historical data to train the model and use historical data to test the model on.  \n",
+    "In the future one could take this project and use weather forecast data to predict actual solar energy generation on.  \n",
+    "Documentation: Historical Weather Data: https://joint-research-centre.ec.europa.eu/photovoltaic-geographical-information-system-pvgis/getting-started-pvgis/api-non-interactive-service_en  \n",
+    "Documentation: Historical Solar Energy Generation: https://github.com/bundesAPI/smard-api  \n",
+    "Documentation: Forecast Weather Data: https://open-meteo.com/en/docs  \n",
     "\n",
-    "### Data Source (Historical solar radiation data)\n",
+    "### Data Source (Historical Weather Data)\n",
     "The dataset is fetched using the PVGIS API and includes parameters:\n",
     "- **Global in-plane irradiance (G(i))**: Measured in W\\m2\n",
     "- **Air temperature (T2m)**: Measured in °C\n",
     "- **Wind speed (WS10m)**: Measured in m/s at 10m\n",
     "- **Location**: Latitude and Longitude chosen for Freiburg im Breisgau\n",
-    "- **Time**: in UTC. Span of time for training data is the year 2020 with hourly data, i.e. 8760 entries, each entry representing 1 hour of the year (possible data to fetch from this homepage for years: 2005-2020)\n",
+    "- **Time**: in UTC. Possible data to fetch from this homepage for years: 2005-2020\n",
     "\n",
-    "### Project Goal\n",
-    "The objective is to preprocess, analyze, and build models that can predict solar energy generation for Baden-Württemberg based on weather forecasts.\n"
+    "### Data Source (Historical Solar Energy Generation)\n",
+    "The dataset is fetched using the Smard API and includes parameters:\n",
+    "- **value**: Energy in MWh  \n",
+    "\n",
+    "### Data Source (Forecast Weather Data)\n",
+    "The dataset is fetched using the open-meteo API and includes parameters:\n",
+    "- **Shortwave radiation**: Measured in W/m2\n",
+    "- **Air temperature (T2m)**: Measured in °C\n",
+    "- **Wind speed (WS10m)**: Measured in km/h, but converted to m/s directly within pull_future_weather_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +219,7 @@
     "    # Extract the time-series data\n",
     "    data_list = []\n",
     "    for entry in all_data:\n",
-    "        #metadata = entry.get(\"smeta_data\", {})\n",
+    "        metadata = entry.get(\"smeta_data\", {})\n",
     "        series = entry.get(\"series\", [])\n",
     "\n",
     "        for timestamp, value in series:\n",
@@ -240,7 +250,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pull_future_weather_data(save=False, save_path=None):\n",
+    "    \"\"\"\n",
+    "    This is a starting point to use weather forecasts and do predictions on those forecasts.\n",
+    "    Pros: It'd provide an actual value having a prediction of solar energy generation for the future.\n",
+    "    Cons: It's really hard to interpret and get good results i think, because you are predicting (energy) on another prediction (weather).\n",
+    "          Weather Prediction could be bad, then so is the energy prediction.\n",
+    "          Also, for evaluating the prediction, we would need to wait for time to pass in order to see the actual energy generation for that time period.\n",
+    "          There is only roughly 14 days of weather predictions out there from what I have seen. There are longer weather forecasts, but how accurate are they?\n",
+    "\n",
+    "    Documentation: https://open-meteo.com/en/docs      \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Latitude/Longitude for Freiburg im Breisgau\n",
+    "    lat = \"47.99\"\n",
+    "    lon = \"7.84\"\n",
+    "    url = f\"https://api.open-meteo.com/v1/forecast?latitude={lat}&longitude={lon}&hourly=shortwave_radiation&hourly=temperature_2m&hourly=wind_speed_10m\"\n",
+    "\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    data = json.loads(response.text)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        try:\n",
+    "            lat = data[\"latitude\"]\n",
+    "            lon = data[\"longitude\"]\n",
+    "            time = data[\"hourly\"][\"time\"]\n",
+    "            temperature_2m = data[\"hourly\"][\"temperature_2m\"]\n",
+    "            wind_speed_10m = data[\"hourly\"][\"wind_speed_10m\"]\n",
+    "            shortwave_radiation = data[\"hourly\"][\"shortwave_radiation\"]\n",
+    "        except Exception as e:\n",
+    "            print(\"Error while parsing JSON:\", str(e))\n",
+    "    else:\n",
+    "        print(f\"Error {response.status_code}: {response.text}\")\n",
+    "\n",
+    "    print(np.mean(shortwave_radiation))\n",
+    "\n",
+    "    # convert unit of windspeed from km/h to m/s\n",
+    "    wind_speed_10m = [round(wind_speed / 3.6, 2) for wind_speed in wind_speed_10m]\n",
+    "\n",
+    "    df = pd.DataFrame.from_dict({\"time\": time, \"shortwave_radiation\": shortwave_radiation, \"temperature_2m\": temperature_2m, \"wind_speed_10m\": wind_speed_10m})\n",
+    "\n",
+    "    if save == True and save_path is not None:\n",
+    "        with open(save_path, \"wb\") as file:\n",
+    "            pickle.dump(df, file)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# Functions to load pickle data from local machine\n",
+    "def load_local_data(local_path):\n",
+    "    with open(local_path, \"rb\") as file:\n",
+    "        df = pickle.load(file)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
